# MicroServerRust

./: .env  Cargo.toml  DockerFIle  Dockerfile  README.md  docker-compose.yml
db/init.sql/: init.sql
entity/: Cargo.toml
entity/src/: mod.rs  prelude.rs  task.rs
migration/src/: m20220101_000001_create_table.rs
src/: main.rs
src/handler/: task_handler.rs
src/middleware/: global_filter_exception.rs  mod.rs  verify_time.rs
src/model/: task_model.rs
src/repository/: task_repository.rs
src/router/: router_task.rs
src/server/: server.rs
src/service/: task_service.rs
src/utils/: api_error.rs  constants.rs  mod.rs  swagger_conf.rs
