[package]
name = "MicroServerRust"
version = "0.1.0"
edition = "2024"

[workspace]
members = [".", "entity", "migration"]

[dependencies]

entity = { path = "entity" }
migration = { path = "migration" }

#server
axum = "0.7.4"
tokio = { version = "1.36.0", features = ["full"] }
#orm
sea-orm = { version = "0.12.14", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
] }

#serde
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"

#env
lazy_static = "1.4.0"
dotenvy = "0.15.7"
uuid = { version = "1.15.1", features = ["v4"] }
chrono = "0.4.40"